<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:id="@+id/deviceNameTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
	        android:text="@string/device_name"
	        android:textSize="20dp"
	        android:textColor="#fff"/>
	    <TextView 
	        android:id="@+id/isPairTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@id/deviceNameTV"
	        android:layout_alignParentRight="true"
	        android:paddingRight="5dp"
	        android:text="@string/is_pair"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:text="@string/mac_address"/>
	    <TextView 
	        android:id="@+id/marAddressTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/address_str"/>
	</LinearLayout>
</LinearLayout>