<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp" >
	
    <LinearLayout
        android:id="@+id/title1Layout" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#404040"
        android:padding="2dp">
        <TextView 
	    	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingLeft="5dp"
        	android:text="@string/device_list"
        	android:textColor="#fff"/>
    </LinearLayout>
    <ListView 
        android:id="@+id/deviceListView"
        android:layout_width="fill_parent"
        android:layout_height="350dp"
        android:layout_below="@id/title1Layout"
        android:paddingTop="5dp">
        
    </ListView>
    <LinearLayout
        android:id="@+id/title2Layout" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deviceListView"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:background="#404040"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingLeft="5dp"
        	android:text="@string/send_file1"
        	android:textColor="#fff"/>
        <TextView 
            android:id="@+id/sendFileTV"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingLeft="5dp"
        	android:text="@string/null_name"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonLayout" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="2dp"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/setDeviceVisibleBtn"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/set_visible"/>
        <Button 
            android:id="@+id/searchDeviceBtn"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/search_device"/>
        <Button 
            android:id="@+id/cancelSearchBtn"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/select_file"/>
    </LinearLayout>
</RelativeLayout>