<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:id="@+id/selectFileBtnLayout" 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="#C0C0C0"
	    android:padding="2dp"
	    android:orientation="horizontal">
	    <Button
            android:id="@+id/selectFileBackBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />
        <Button
            android:id="@+id/selectFileEnsureBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ensure" />
       	<Button 
       	    android:id="@+id/selectFileCancelBtn"
       	    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/cancel"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_above="@id/selectFileBtnLayout"
		android:padding="5dp"
		android:background="#808080">
	    <LinearLayout 
	        android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_marginBottom="5dp"
		    android:padding="5dp"
		    android:background="@drawable/listbg"
		    android:cacheColorHint="#00000000">
	        <ListView
	            android:id="@+id/fileListView"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="@android:color/transparent"
	            android:cacheColorHint="#00000000" >
	        </ListView>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>