<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 设置可见 -->

    <LinearLayout
        android:id="@+id/setDeviceVisibleBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_click"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:contentDescription="@null"
            android:src="@drawable/eye" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/set_visible"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- 搜索设备 -->

    <LinearLayout
        android:id="@+id/searchDeviceBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_click"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:contentDescription="@null"
            android:src="@drawable/radar" />

        <TextView
            android:id="@+id/searchBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/search_device"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- 选择文件 -->

    <LinearLayout
        android:id="@+id/cancelSearchBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_click"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:contentDescription="@null"
            android:src="@drawable/file_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/select_file"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- 待发送文件 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/file_to_send"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sendFileTV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- 设备列表 -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/device_list"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_click"
        android:clickable="true"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/deviceListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

   

</LinearLayout>